unpackaged/main/default/objects/Content_Permission__c/Content_Permission__c.object-meta.xml
<CustomObject>
    <label>Content Permission</label>
    <nameField>
        <displayFormat>CP-{0000}</displayFormat>
        <label>Content Permission Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Content Permissions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>