unpackaged/main/default/objects/Content_Permission__c/fields/Collection__c.field-meta.xml
<CustomField>
    <fullName>Collection__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Collection</label>
    <referenceTo>Collection__c</referenceTo>
    <relationshipLabel>Content Permissions</relationshipLabel>
    <relationshipName>Content_Permissions</relationshipName>
    <type>Lookup</type>
</CustomField>