unpackaged/main/default/objects/Content_Permission__c/fields/Communications_Content__c.field-meta.xml
<CustomField>
    <fullName>Communications_Content__c</fullName>
    <label>Communications Content</label>
    <referenceTo>Communications_Content__c</referenceTo>
    <relationshipLabel>Content Permissions</relationshipLabel>
    <relationshipName>Content_Permissions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>