unpackaged/main/default/objects/Content_Permission__c/fields/Targeted_Store_Account__c.field-meta.xml
<CustomField>
    <fullName>Targeted_Store_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Targeted Store/ Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Content Permissions</relationshipLabel>
    <relationshipName>Content_Permissions</relationshipName>
    <type>Lookup</type>
</CustomField>